# wsland

./: .gitignore  flake.nix  meson.build
include/wsland/: adapter.h  freerdp.h  server.h
include/wsland/utils/: box.h  config.h
protocol/: meson.build
src/: freerdp.c  freerdp_ctx_server_applist.c  freerdp_ctx_server_disp.c  freerdp_ctx_server_drdynvc.c  freerdp_ctx_server_gfxredir.c  freerdp_ctx_server_rail.c  freerdp_ctx_server_rail_language.c  freerdp_ctx_server_rdpgfx.c  freerdp_dispatch.c  freerdp_instance.c  freerdp_keyboard.c  freerdp_shell.c  freerdp_surface.c  freerdp_tls.c  main.c  wsland.c  wsland.h
src/adapter/: adapter.c  handle.c
src/freerdp/: freerdp.c  handle.c  peer.c
src/freerdp/context/: clipboard.c  gfxredir.c  rail.c  rdpgfx.c
src/server/: handle.c  output.c  server.c  wayland.c  xwayland.c
src/utils/: box.c  config.c
subprojects/: wlroots.wrap
